fixed channel align

--- a/public/assets/channels_page.css
+++ b/public/assets/channels_page.css
@@ -10,6 +10,7 @@
 #channels_page ul li {
   margin-bottom: 20px;
   position: relative;
+  height: 230px;
 }
 
 #channels_page ul a{
